--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+*.html linguist-language=HTML
+*.java linguist-language=Java
+*.ts linguist-language=TypeScript
